assets/index.css
/*
Avalanche blue #2596be;
Avalanche maroon #6f253c;
*/

@font-face {
    font-family: "DSEG7-Classic-Bold";
    src: url(fonts/DSEG7Classic-Bold.woff);
}

html, body {
    max-width: 100%;
    overflow: hidden;
    margin: 0;
}

body {
    width: 100%; 
    min-height: 100%;
    overflow: hidden;
    background: url(images/concrete_seamless.png);
    background-size: contain;
    background-attachment: fixed;
    margin: 0;
    z-index: -100;
}

.wrapper {
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    position: absolute;
    min-width: 100%;
    height: 100%;
    margin: 0 auto;
    overflow: hidden;
    justify-content: center;
}

h1 {
    position: absolute;
    margin-top: 3rem;
    margin-bottom: 1rem;
    font-family: 'Bungee', 'Oxanium', 'Helvetica', sans-serif;
    font-size: 64px;
    opacity: 80%;
    text-align: center;
    letter-spacing: 0.3rem;
    color: #5d1d31;
    border: none;
    outline: none;
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
}

.clockContainer {
    position: relative;
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    justify-content: center;
    margin-top: 15rem;
    margin-bottom: 1rem;
    margin-left: 1rem;
    margin-right: 1rem;
    z-index: 12;
}

.clock {
    min-width: 6rem;
    max-width: 5rem;
    top: 28%;
    height: 4rem;
    line-height: 4rem;
    margin: 0 2.5rem;
    padding: 2rem 4rem;
    font-family: DSEG7-Classic-Bold, Arial, Helvetica, sans-serif;
    font-size: 72px;
    text-align: center;
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
    background-color: rgba(110, 170, 250, 0.2);
    color: #5d1d31;
    border: 1px solid rgba(110, 170, 250, 0.3);
    border-bottom: 1px solid rgba(110, 170, 250, 0.3);
    box-shadow: 0 0 1px #143b91;
    border-radius: 5px 35px;
    outline: none;
    z-index: 50;
}

.colon {
    position: relative;
    color:#5d1d31;
    font-size: 88px;
    opacity: 80%;
}

#lastColon {
    animation: flash 2s linear infinite;
}

@keyframes flash {
    25% { opacity: 0; }

    50% { opacity: 0; }

    100% { opacity: 80%; }
}

.logoContainer {
    position: absolute;
    width: 100%;
    height: 60%;
    top: 0;
    background-image: url(images/avalanche.svg);
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    margin: 0 auto;
    opacity: 20%;
    z-index: -12;
}

.bottomContainer {
    position: absolute;
    min-width: 100%;
    min-height: 40%;
    max-height: 100%;
    bottom: 0;
    background-color:rgba(110, 170, 250, 0.2);
    z-index: 6;
    overflow-y: hidden;
}

#goal {
    position: relative;
    float: right;
    margin-right: 15rem;
    margin-top: 7rem;
    margin-bottom: 3rem;
    z-index: 50;
}

/* 
#cup {
    position: absolute;
    margin: 0 auto;
    right: 60%;
    padding: auto;
    transform: scale(0.2);
    opacity: 30%;
    z-index: 44;
} 
*/


@media only screen and (max-width: 992px) {
    h1 {
        margin: 2rem;
        font-size: 26px;
    }
    .clockContainer {
        margin-top: 13rem;
        margin-bottom: 1rem;
        margin-left: 1rem;
        margin-right: 1rem;
    }
    .clock { 
        min-width: 3rem;
        max-width: 3rem;
        height: 1rem;
        margin: 0 auto;
        padding: 5px 18px;
        border-radius: 2px 14px;
        line-height: 1rem;
        font-size: 20px;
        justify-content: center;
    }
    .colon {
        font-size: 44px;
        line-height: 1rem;
    }
    #goal {
        transform: scale(0.6);
    }
}

@media (max-width: 768px) and (orientation: landscape) {
    .clockContainer {
        margin-top: 8rem;
    }
    .clock { 
        min-width: 5rem;
        max-width: 5rem;
        height: 1rem;
        margin: 0 auto;
        padding: 4px 28px;
        border-radius: 2px 14px;
        line-height: 1rem;
        font-size: 28px;
    }
}

